# FastNav

./: .gitignore  README.md  config.rviz  debug.rviz  fastnav.rviz
config/common/: frames.yaml  mission.yaml  safety.yaml  topics.yaml
config/common/sensor/: mid360.yaml
config/common/uav/: x250_mid360.yaml  x500_mid360.yaml
config/real/: controller.yaml  mapping.yaml  perception.yaml  planner.yaml  safety.yaml
config/real/px4/: mavros.yaml  multicopter_limits.params
config/real/sensor/: mid360.yaml
config/real/uav/: real_quad.yaml
config/sim/: controller.yaml  mapping.yaml  perception.yaml  planner.yaml
config/sim/gz/: gz.yaml
config/sim/gz/worlds/: forest_easy.sdf  forest_hard.sdf  forest_medium.sdf
config/sim/px4/: multicopter_limits.params  multicopter_limits_high.params  multicopter_limits_low.params  multicopter_limits_medium.params  multicopter_limits_x250.params  sitl.yaml  sitl_x250.yaml
config/sim/px4/airframes/: 4023_gz_x250_mid360
config/sim/sensor/: mid360.yaml
config/sim/uav/: x250_mid360.yaml  x500_mid360.yaml
hardware/flight_checklists/: emergency_procedure.md  offboard_test_check.md  preflight_check.md
hardware/px4_params/: real_base.params  real_offboard.params  real_safety.params
hardware/sensors/: lidar_mount.md  mid360_extrinsic.yaml
hardware/wiring/: companion_computer_connection.md  mid360_connection.md  pixhawk_connection.md
ros1_ws/devel/: .catkin  local_setup.sh  setup.sh
ros1_ws/devel/include/fastnav_msgs/: ControlCommand.h  ObstacleInfo.h  PlannerState.h
ros1_ws/devel/include/traj_utils/: MincoTrajectory.h
ros1_ws/devel/lib/fastnav_control/: offboard_control_node  offboard_node
ros1_ws/src/fastnav_bringup/: CMakeLists.txt  package.xml
ros1_ws/src/fastnav_bringup/launch/: fastnav_full_sim.launch  fastnav_planner_fsm.launch  fastnav_sim_base.launch  fastnav_sim_navigation.launch  load_fastnav_config.launch  sim_offboard.launch
ros1_ws/src/fastnav_control/: CMakeLists.txt  package.xml
ros1_ws/src/fastnav_control/config/: control_sim.yaml
ros1_ws/src/fastnav_control/include/fastnav_control/: control_fsm.h  px4_offboard_interface.h
ros1_ws/src/fastnav_control/launch/: offboard_control.launch
ros1_ws/src/fastnav_control/src/: control_fsm.cpp  offboard_control_node.cpp  offboard_node.cpp  px4_offboard_interface.cpp
ros1_ws/src/fastnav_gz_bridge/: CMakeLists.txt
ros1_ws/src/fastnav_gz_bridge/config/: gz_bridge_sim.yaml
ros1_ws/src/fastnav_gz_bridge/include/fastnav_gz_bridge/: gz_odom_bridge.h  gz_pointcloud_bridge.h
ros1_ws/src/fastnav_gz_bridge/launch/: gz_pointcloud_bridge.launch
ros1_ws/src/fastnav_gz_bridge/src/: gz_odom_bridge.cpp  gz_odom_bridge_node.cpp  gz_pointcloud_bridge.cpp  gz_pointcloud_bridge_node.cpp
ros1_ws/src/fastnav_mapping/: CMakeLists.txt
ros1_ws/src/fastnav_mapping/config/: mapping.yaml
ros1_ws/src/fastnav_mapping/include/fastnav_mapping/: voxel_map.h
ros1_ws/src/fastnav_mapping/launch/: mapping.launch
ros1_ws/src/fastnav_mapping/src/: local_voxel_map_node.cpp  voxel_map.cpp
ros1_ws/src/fastnav_msgs/: CMakeLists.txt
ros1_ws/src/fastnav_msgs/msg/: ControlCommand.msg  ObstacleInfo.msg  PlannerState.msg  PlannerTiming.msg
ros1_ws/src/fastnav_perception/: CMakeLists.txt
ros1_ws/src/fastnav_perception/config/: perception.yaml
ros1_ws/src/fastnav_perception/launch/: perception.launch
ros1_ws/src/fastnav_perception/src/: cloud_filter_node.cpp  cloud_transform_node.cpp
ros1_ws/src/fastnav_planner/: CMakeLists.txt  package.xml
ros1_ws/src/fastnav_planner/config/: planner.yaml
ros1_ws/src/fastnav_planner/include/fastnav_planner/: astar_planner.h  local_planner_manager.h  path_optimizer.h  planner_fsm.h
ros1_ws/src/fastnav_planner/include/fastnav_planner/debug/: planner_debug_recorder.h
ros1_ws/src/fastnav_planner/include/fastnav_planner/frontend/: astar_planner.h
ros1_ws/src/fastnav_planner/include/fastnav_planner/fsm/: planner_fsm.h
ros1_ws/src/fastnav_planner/include/fastnav_planner/manager/: local_planner_manager.h
ros1_ws/src/fastnav_planner/include/fastnav_planner/optimizer/: path_optimizer.h  trajectory_feasibility_checker.h
ros1_ws/src/fastnav_planner/launch/: planner.launch
ros1_ws/src/fastnav_planner/src/: astar_planner.cpp  local_planner_manager.cpp  local_planner_node.cpp  path_optimizer.cpp  planner_fsm.cpp
ros1_ws/src/fastnav_planner/src/debug/: planner_debug_recorder.cpp
ros1_ws/src/fastnav_planner/src/frontend/: astar_planner.cpp
ros1_ws/src/fastnav_planner/src/fsm/: planner_fsm.cpp
ros1_ws/src/fastnav_planner/src/manager/: local_planner_manager.cpp
ros1_ws/src/fastnav_planner/src/optimizer/: path_optimizer.cpp  trajectory_feasibility_checker.cpp
ros1_ws/src/fastnav_tf/: CMakeLists.txt
ros1_ws/src/fastnav_tf/launch/: fastnav_tf.launch
ros1_ws/src/fastnav_tf/src/: fastnav_tf_broadcaster_node.cpp
ros1_ws/src/traj_utils/: CMakeLists.txt
ros1_ws/src/traj_utils/include/traj_utils/: plan_container.hpp  polynomial_traj.h  uniform_bspline.h
ros1_ws/src/traj_utils/include/traj_utils/corridor/: safe_corridor_generator.h
ros1_ws/src/traj_utils/include/traj_utils/minco/: gcopter_optimizer.h  minco_gcopter_optimizer.h  minco_traj.h
ros1_ws/src/traj_utils/include/traj_utils/minco/gcopter/: firi.hpp  flatness.hpp  gcopter.hpp  geo_utils.hpp  lbfgs.hpp  minco.hpp  quickhull.hpp  root_finder.hpp  sdlp.hpp  trajectory.hpp
ros1_ws/src/traj_utils/launch/: minco_traj_server.launch
ros1_ws/src/traj_utils/msg/: MincoTrajectory.msg
ros1_ws/src/traj_utils/src/: polynomial_traj.cpp  uniform_bspline.cpp
ros1_ws/src/traj_utils/src/corridor/: safe_corridor_generator.cpp
ros1_ws/src/traj_utils/src/minco/: minco_gcopter_optimizer.cpp  minco_traj_server.cpp
scripts/: build_ros1.sh  kill_px4_gz_ros.sh  setup_env.sh  start_fastnav_real.sh  start_fastnav_sim.sh  start_px4_gz.sh
tools/analysis/: live_plot_state.py  plot_log.py  replay_planner_failure_case.py
tools/bag/: record_real.sh  record_sim.sh
tools/px4/: install_fastnav_airframes.sh  write_px4_params.sh
tools/rviz/: fastnav.rviz
(+66 files in other folders)
