<?xml version="1.0"?>
<package format="2">
  <name>fastnav_bringup</name>
  <version>0.0.1</version>
  <description>Launch and bringup package for FastNav.</description>

  <maintainer email="shukun@example.com">shukun</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>fastnav_control</build_depend>
  <build_depend>fastnav_gz_bridge</build_depend>
  <build_depend>fastnav_mapping</build_depend>
  <build_depend>fastnav_perception</build_depend>
  <build_depend>fastnav_planner</build_depend>
  <build_depend>fastnav_tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>fastnav_control</exec_depend>
  <exec_depend>fastnav_gz_bridge</exec_depend>
  <exec_depend>fastnav_mapping</exec_depend>
  <exec_depend>fastnav_perception</exec_depend>
  <exec_depend>fastnav_planner</exec_depend>
  <exec_depend>fastnav_tf</exec_depend>

</package>
